# OOP_in_C

./: Animal.c  CMakeLists.txt  Complex.c  Complex.h  Dog.c  README.md  main.c
AbstractField/: Car.c  Car.h  TestAbstract.c  TestAbstract.h  Vehicle.c  Vehicle.h
AccessControl/: Alien.c  Alien.h  Child.c  Child.h  Parent.c  Parent.h
Classes/: Complex.c
Generic/: TestGeneric.c  TestGeneric.h
Inheritance/: Animal.h  Dog.h
MockPackage/Pack1/: pack1.c  pack1.h
MockPackage/Pack2/: pack2.c  pack2.h
OverloadMethod/: overload.c  overload.h
StaticField/: TestStatic.c  TestStatic.h
